--- a/app/package.json
+++ b/app/package.json
@@ -19,10 +19,12 @@
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-get-random-values": "^1.3.1",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
     "react-native-vector-icons": "^6.6.0",
+    "uuid": "^7.0.2",
     "uuidv4": "^6.0.6"
   },
   "devDependencies": {
