--- a/appRN/package.json
+++ b/appRN/package.json
@@ -16,6 +16,8 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "firebase": "^7.21.0",
+    "formik": "^2.1.5",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.8.0",
@@ -25,7 +27,8 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-video": "^5.1.0-alpha8"
+    "react-native-video": "^5.1.0-alpha8",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -36,6 +39,7 @@
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-native-video": "^5.0.3",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/yup": "^0.29.7",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "babel-jest": "^25.1.0",
