--- a/appRN/package.json
+++ b/appRN/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "^2.11.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8",
+    "react-native-video-player": "^0.10.1",
     "yup": "^0.29.3"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@types/react-native": "^0.63.2",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-native-video": "^5.0.3",
+    "@types/react-native-video-player": "^0.10.1",
     "@types/react-test-renderer": "^16.9.2",
     "@types/yup": "^0.29.7",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
