--- a/appRN/android/settings.gradle
+++ b/appRN/android/settings.gradle
@@ -1,4 +1,5 @@
 rootProject.name = 'appRN'
+apply from: '../node_modules/react-native-unimodules/gradle.groovy'; includeUnimodulesProjects()
 include ':@react-native-community_async-storage'
 project(':@react-native-community_async-storage').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/async-storage/android')
 include ':react-native-video'
