--- a/appRN/package.json
+++ b/appRN/package.json
@@ -22,13 +22,15 @@
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-crop-picker": "^0.35.0",
+    "react-native-media-controls": "^2.1.0",
     "react-native-onboarding-swiper": "^1.1.4",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-slider": "^0.11.0",
+    "react-native-unimodules": "^0.11.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8",
-    "react-native-video-player": "^0.10.1",
     "yup": "^0.29.3"
   },
   "devDependencies": {
