--- a/appRN/package.json
+++ b/appRN/package.json
@@ -24,6 +24,7 @@
     "react-native-image-crop-picker": "^0.35.0",
     "react-native-media-controls": "^2.1.0",
     "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
@@ -31,6 +32,7 @@
     "react-native-unimodules": "^0.11.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8",
+    "rn-fetch-blob": "^0.12.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
@@ -43,6 +45,7 @@
     "@types/react-native-video": "^5.0.3",
     "@types/react-native-video-player": "^0.10.1",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/rn-fetch-blob": "^1.2.1",
     "@types/yup": "^0.29.7",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
