--- a/appRN/package.json
+++ b/appRN/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-community/cameraroll": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/material-top-tabs": "^5.2.18",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@types/uuid": "^8.3.0",
     "firebase": "^7.21.0",
     "formik": "^2.1.5",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-get-random-values": "^1.5.0",
     "react-native-image-crop-picker": "^0.35.0",
     "react-native-media-controls": "^2.1.0",
     "react-native-onboarding-swiper": "^1.1.4",
@@ -29,10 +33,12 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-slider": "^0.11.0",
+    "react-native-tab-view": "^2.15.1",
     "react-native-unimodules": "^0.11.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8",
     "rn-fetch-blob": "^0.12.0",
+    "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
