--- a/appRN/package.json
+++ b/appRN/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-create-thumbnail": "^1.2.1",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-get-random-values": "^1.5.0",
     "react-native-image-crop-picker": "^0.35.0",
