--- a/appRN/package.json
+++ b/appRN/package.json
@@ -17,13 +17,14 @@
     "@react-navigation/material-top-tabs": "^5.2.18",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "@types/uuid": "^8.3.0",
     "firebase": "^7.21.0",
     "formik": "^2.1.5",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-create-thumbnail": "^1.2.1",
+    "react-native-create-thumbnail": "^1.2.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-get-random-values": "^1.5.0",
     "react-native-image-crop-picker": "^0.35.0",
@@ -38,8 +39,9 @@
     "react-native-unimodules": "^0.11.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.0-alpha8",
+    "react-redux": "^7.2.2",
     "rn-fetch-blob": "^0.12.0",
-    "uuid": "^8.3.0",
+    "uuid": "^8.3.1",
     "yup": "^0.29.3"
   },
   "devDependencies": {
@@ -51,6 +53,7 @@
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-native-video": "^5.0.3",
     "@types/react-native-video-player": "^0.10.1",
+    "@types/react-redux": "^7.1.11",
     "@types/react-test-renderer": "^16.9.2",
     "@types/rn-fetch-blob": "^1.2.1",
     "@types/yup": "^0.29.7",
